adding DAG support

--- a/Makefile.in
+++ b/Makefile.in
@@ -57,33 +57,24 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_alias = @host_alias@
 host_triplet = @host@
+ADD_INCLS = @ADD_INCLS@
+ADD_LDFLAGS = @ADD_LDFLAGS@
+ADD_LIBS = @ADD_LIBS@
 AMTAR = @AMTAR@
-AR = @AR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
-CXX = @CXX@
-CXXCPP = @CXXCPP@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
-EGREP = @EGREP@
 EXEEXT = @EXEEXT@
-F77 = @F77@
-GCJ = @GCJ@
-GCJFLAGS = @GCJFLAGS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-LIBPCAP = @LIBPCAP@
-LIBPCAP_PATH = @LIBPCAP_PATH@
 LIBTOOL = @LIBTOOL@
-LIBZ = @LIBZ@
-LIBZ_PATH = @LIBZ_PATH@
 LN_S = @LN_S@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
-RC = @RC@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
