fixes in trace.c for DAG support. New dagapi / dagopts.c. Still need to find way to build these outside the source

--- a/examples/rate/Makefile
+++ b/examples/rate/Makefile
@@ -8,7 +8,7 @@ CFLAGS += $(INCLUDE)
 libdir = -L$(PREFIX)/lib
 LDLIBS = $(libdir) -ltrace
 
-BINS = rate rate-dir
+BINS = rate rate-dir raw-rate
 .PHONY: all clean distclean install depend
 
 all: $(BINS) 
