--- a/examples/capture/Makefile
+++ b/examples/capture/Makefile
@@ -6,9 +6,9 @@ INCLUDE = -I$(PREFIX)/include
 CFLAGS = -Wall -Wimplicit -Wformat -pipe -g -O2 -D_FILE_OFFSET_BITES=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE
 CFLAGS += $(INCLUDE)
 libdir = -L$(PREFIX)/lib
-LDLIBS = $(libdir) -ltrace
+LDLIBS = $(libdir) -ltrace -lzl
 
-BINS = capture
+BINS = capture capture-gzip
 .PHONY: all clean distclean install depend
 
 all: $(BINS) 
