--- a/configure.in
+++ b/configure.in
@@ -101,6 +101,7 @@ then
                 ADD_INCLS="$ADD_INCLS -I $dag_include_dir"
 		ADD_LIBS="$ADD_LIBS -ldag"
 		ADD_LDFLAGS="$ADD_LDFLAGS -L$dag_lib_dir"
+		DAG_SOURCES="dagapi.c dagopts.c"
                 #ADD_LIBS="$ADD_LIBS $dag_tools_dir/dagapi.o $dag_tools_dir/dagopts.o"
                 #ADD_SOURCEES="$ADD_SOURCES $dag_tools_dir/dagapi.c $dag_tools_dir/dagopts.c"
                 ac_cv_lbl_dag_api=yes
@@ -172,6 +173,7 @@ ADD_LDFLAGS="$ADD_LDFLAGS -L$ac_cv_use_zlib_path"
 AC_SUBST([ADD_LIBS])
 AC_SUBST([ADD_LDFLAGS])
 AC_SUBST([ADD_INCLS])
+AC_SUBST([DAG_SOURCES])
 
 dnl and finally, output our Makefiles
 AC_OUTPUT(Makefile lib/Makefile)
