--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,7 +1,10 @@
 lib_LTLIBRARIES = libtrace.la
 include_HEADERS = libtrace.h dagformat.h wag.h
-libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h @DAG_SOURCES@
-#dagapi.c dagopts.c
+if HAVE_DAG
+libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h dagapi.c dagopts.c
+else
+libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
+endif
 libtrace_la_CFLAGS = @ADD_INCLS@
 libtrace_la_LIBADD = @ADD_LIBS@
 libtrace_la_LDFLAGS=-version-info 2:8:0 @ADD_LDFLAGS@
