--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES = libtrace.la
 include_HEADERS = libtrace.h dagformat.h wag.h
 if HAVE_DAG
-libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h dagapi.c dagopts.c
+libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 else
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 endif
