--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -64,6 +64,7 @@ AMTAR = @AMTAR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
+DAG_TOOLS_DIR = @DAG_TOOLS_DIR@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
@@ -83,11 +84,11 @@ install_sh = @install_sh@
 
 lib_LTLIBRARIES = libtrace.la
 include_HEADERS = libtrace.h dagformat.h wag.h
-@HAVE_DAG_TRUE@libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
+@HAVE_DAG_TRUE@libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h dagapi.c dagopts.c
 @HAVE_DAG_FALSE@libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 libtrace_la_CFLAGS = @ADD_INCLS@
 libtrace_la_LIBADD = @ADD_LIBS@
-libtrace_la_LDFLAGS = -version-info 2:9:0 @ADD_LDFLAGS@
+libtrace_la_LDFLAGS = -version-info 2:10:0 @ADD_LDFLAGS@
 subdir = lib
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
@@ -96,7 +97,8 @@ LTLIBRARIES = $(lib_LTLIBRARIES)
 
 libtrace_la_DEPENDENCIES =
 @HAVE_DAG_TRUE@am_libtrace_la_OBJECTS = libtrace_la-trace.lo \
-@HAVE_DAG_TRUE@	libtrace_la-fifo.lo
+@HAVE_DAG_TRUE@	libtrace_la-fifo.lo libtrace_la-dagapi.lo \
+@HAVE_DAG_TRUE@	libtrace_la-dagopts.lo
 @HAVE_DAG_FALSE@am_libtrace_la_OBJECTS = libtrace_la-trace.lo \
 @HAVE_DAG_FALSE@	libtrace_la-fifo.lo
 libtrace_la_OBJECTS = $(am_libtrace_la_OBJECTS)
@@ -107,7 +109,9 @@ CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
-@AMDEP_TRUE@DEP_FILES = $(DEPDIR)/libtrace_la-fifo.Plo \
+@AMDEP_TRUE@DEP_FILES = $(DEPDIR)/libtrace_la-dagapi.Plo \
+@AMDEP_TRUE@	$(DEPDIR)/libtrace_la-dagopts.Plo \
+@AMDEP_TRUE@	$(DEPDIR)/libtrace_la-fifo.Plo \
 @AMDEP_TRUE@	$(DEPDIR)/libtrace_la-trace.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
@@ -164,6 +168,8 @@ clean-libLTLIBRARIES:
 	-test -z "$(lib_LTLIBRARIES)" || rm -f $(lib_LTLIBRARIES)
 libtrace_la-trace.lo: trace.c
 libtrace_la-fifo.lo: fifo.c
+libtrace_la-dagapi.lo: dagapi.c
+libtrace_la-dagopts.lo: dagopts.c
 libtrace.la: $(libtrace_la_OBJECTS) $(libtrace_la_DEPENDENCIES) 
 	$(LINK) -rpath $(libdir) $(libtrace_la_LDFLAGS) $(libtrace_la_OBJECTS) $(libtrace_la_LIBADD) $(LIBS)
 
@@ -173,6 +179,8 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/libtrace_la-dagapi.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/libtrace_la-dagopts.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/libtrace_la-fifo.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/libtrace_la-trace.Plo@am__quote@
 
@@ -232,6 +240,42 @@ libtrace_la-fifo.lo: fifo.c
 @AMDEP_TRUE@	depfile='$(DEPDIR)/libtrace_la-fifo.Plo' tmpdepfile='$(DEPDIR)/libtrace_la-fifo.TPlo' @AMDEPBACKSLASH@
 @AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libtrace_la_CFLAGS) $(CFLAGS) -c -o libtrace_la-fifo.lo `test -f fifo.c || echo '$(srcdir)/'`fifo.c
+
+libtrace_la-dagapi.o: dagapi.c
+@AMDEP_TRUE@	source='dagapi.c' object='libtrace_la-dagapi.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/libtrace_la-dagapi.Po' tmpdepfile='$(DEPDIR)/libtrace_la-dagapi.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libtrace_la_CFLAGS) $(CFLAGS) -c -o libtrace_la-dagapi.o `test -f dagapi.c || echo '$(srcdir)/'`dagapi.c
+
+libtrace_la-dagapi.obj: dagapi.c
+@AMDEP_TRUE@	source='dagapi.c' object='libtrace_la-dagapi.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/libtrace_la-dagapi.Po' tmpdepfile='$(DEPDIR)/libtrace_la-dagapi.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libtrace_la_CFLAGS) $(CFLAGS) -c -o libtrace_la-dagapi.obj `cygpath -w dagapi.c`
+
+libtrace_la-dagapi.lo: dagapi.c
+@AMDEP_TRUE@	source='dagapi.c' object='libtrace_la-dagapi.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/libtrace_la-dagapi.Plo' tmpdepfile='$(DEPDIR)/libtrace_la-dagapi.TPlo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libtrace_la_CFLAGS) $(CFLAGS) -c -o libtrace_la-dagapi.lo `test -f dagapi.c || echo '$(srcdir)/'`dagapi.c
+
+libtrace_la-dagopts.o: dagopts.c
+@AMDEP_TRUE@	source='dagopts.c' object='libtrace_la-dagopts.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/libtrace_la-dagopts.Po' tmpdepfile='$(DEPDIR)/libtrace_la-dagopts.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libtrace_la_CFLAGS) $(CFLAGS) -c -o libtrace_la-dagopts.o `test -f dagopts.c || echo '$(srcdir)/'`dagopts.c
+
+libtrace_la-dagopts.obj: dagopts.c
+@AMDEP_TRUE@	source='dagopts.c' object='libtrace_la-dagopts.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/libtrace_la-dagopts.Po' tmpdepfile='$(DEPDIR)/libtrace_la-dagopts.TPo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libtrace_la_CFLAGS) $(CFLAGS) -c -o libtrace_la-dagopts.obj `cygpath -w dagopts.c`
+
+libtrace_la-dagopts.lo: dagopts.c
+@AMDEP_TRUE@	source='dagopts.c' object='libtrace_la-dagopts.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@	depfile='$(DEPDIR)/libtrace_la-dagopts.Plo' tmpdepfile='$(DEPDIR)/libtrace_la-dagopts.TPlo' @AMDEPBACKSLASH@
+@AMDEP_TRUE@	$(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+	$(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libtrace_la_CFLAGS) $(CFLAGS) -c -o libtrace_la-dagopts.lo `test -f dagopts.c || echo '$(srcdir)/'`dagopts.c
 CCDEPMODE = @CCDEPMODE@
 uninstall-info-am:
 install-includeHEADERS: $(include_HEADERS)
@@ -388,6 +432,12 @@ uninstall-am: uninstall-includeHEADERS uninstall-info-am \
 	tags uninstall uninstall-am uninstall-includeHEADERS \
 	uninstall-info-am uninstall-libLTLIBRARIES
 
+
+dagapi.c:
+	cp @DAG_TOOLS_DIR@/dagapi.c .
+
+dagopts.c:
+	cp @DAG_TOOLS_DIR@/dagopts.c .
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
