changes to pull in dagapi.c and dagopts.c from dag source tree

--- a/Makefile.in
+++ b/Makefile.in
@@ -64,6 +64,7 @@ AMTAR = @AMTAR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
+DAG_TOOLS_DIR = @DAG_TOOLS_DIR@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
