--- a/configure.in
+++ b/configure.in
@@ -101,6 +101,8 @@ then
                 ADD_INCLS="$ADD_INCLS -I $dag_include_dir"
 		ADD_LIBS="$ADD_LIBS -ldag"
 		ADD_LDFLAGS="$ADD_LDFLAGS -L$dag_lib_dir"
+		DAG_TOOLS_DIR=$dag_tools_dir
+		AC_SUBST([DAG_TOOLS_DIR])
                 #ADD_LIBS="$ADD_LIBS $dag_tools_dir/dagapi.o $dag_tools_dir/dagopts.o"
                 #ADD_SOURCES="$ADD_SOURCES $dag_tools_dir/dagapi.c $dag_tools_dir/dagopts.c"
                 ac_cv_lbl_dag_api=yes
