--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -13,8 +13,6 @@
 
 @SET_MAKE@
 
-# Makefile.am -- Process this file with automake to produce Makefile.in
-
 SHELL = @SHELL@
 
 srcdir = @srcdir@
@@ -63,21 +61,14 @@ ADD_INCLS = @ADD_INCLS@
 ADD_LDFLAGS = @ADD_LDFLAGS@
 ADD_LIBS = @ADD_LIBS@
 AMTAR = @AMTAR@
-AR = @AR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
-CXX = @CXX@
-CXXCPP = @CXXCPP@
 DAG_TOOLS_DIR = @DAG_TOOLS_DIR@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
-EGREP = @EGREP@
 EXEEXT = @EXEEXT@
-F77 = @F77@
-GCJ = @GCJ@
-GCJFLAGS = @GCJFLAGS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
@@ -85,18 +76,11 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
-RC = @RC@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
-
-INCLUDES = -I$(top_builddir) -I$(top_srcdir)
-
-noinst_LIBRARIES = libreplace.a
-libreplace_a_SOURCES = 
-libreplace_a_LIBADD = @LIBOBJS@
 
 lib_LTLIBRARIES = libtrace.la
 include_HEADERS = libtrace.h dagformat.h wag.h
@@ -109,12 +93,6 @@ subdir = lib
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
-LIBRARIES = $(noinst_LIBRARIES)
-
-libreplace_a_AR = $(AR) cru
-libreplace_a_DEPENDENCIES = @LIBOBJS@
-am_libreplace_a_OBJECTS =
-libreplace_a_OBJECTS = $(am_libreplace_a_OBJECTS)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 
 libtrace_la_DEPENDENCIES =
@@ -134,8 +112,7 @@ depcomp = $(SHELL) $(top_srcdir)/depcomp
 @AMDEP_TRUE@DEP_FILES = $(DEPDIR)/libtrace_la-dagapi.Plo \
 @AMDEP_TRUE@	$(DEPDIR)/libtrace_la-dagopts.Plo \
 @AMDEP_TRUE@	$(DEPDIR)/libtrace_la-fifo.Plo \
-@AMDEP_TRUE@	$(DEPDIR)/libtrace_la-trace.Plo \
-@AMDEP_TRUE@	$(DEPDIR)/strndup.Po
+@AMDEP_TRUE@	$(DEPDIR)/libtrace_la-trace.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -144,11 +121,11 @@ CCLD = $(CC)
 LINK = $(LIBTOOL) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(AM_LDFLAGS) $(LDFLAGS) -o $@
 CFLAGS = @CFLAGS@
-DIST_SOURCES = $(libreplace_a_SOURCES) $(libtrace_la_SOURCES)
+DIST_SOURCES = $(libtrace_la_SOURCES)
 HEADERS = $(include_HEADERS)
 
-DIST_COMMON = $(include_HEADERS) Makefile.am Makefile.in strndup.c
-SOURCES = $(libreplace_a_SOURCES) $(libtrace_la_SOURCES)
+DIST_COMMON = $(include_HEADERS) Makefile.am Makefile.in
+SOURCES = $(libtrace_la_SOURCES)
 
 all: all-am
 
@@ -170,15 +147,6 @@ Makefile:  $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && \
 	  CONFIG_HEADERS= CONFIG_LINKS= \
 	  CONFIG_FILES=$(subdir)/$@ $(SHELL) ./config.status
-
-AR = ar
-
-clean-noinstLIBRARIES:
-	-test -z "$(noinst_LIBRARIES)" || rm -f $(noinst_LIBRARIES)
-libreplace.a: $(libreplace_a_OBJECTS) $(libreplace_a_DEPENDENCIES) 
-	-rm -f libreplace.a
-	$(libreplace_a_AR) libreplace.a $(libreplace_a_OBJECTS) $(libreplace_a_LIBADD)
-	$(RANLIB) libreplace.a
 install-libLTLIBRARIES: $(lib_LTLIBRARIES)
 	@$(NORMAL_INSTALL)
 	$(mkinstalldirs) $(DESTDIR)$(libdir)
@@ -215,7 +183,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/libtrace_la-dagopts.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/libtrace_la-fifo.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/libtrace_la-trace.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@$(DEPDIR)/strndup.Po@am__quote@
 
 distclean-depend:
 	-rm -rf $(DEPDIR)
@@ -384,7 +351,7 @@ distdir: $(DISTFILES)
 	done
 check-am: all-am
 check: check-am
-all-am: Makefile $(LIBRARIES) $(LTLIBRARIES) $(HEADERS)
+all-am: Makefile $(LTLIBRARIES) $(HEADERS)
 
 installdirs:
 	$(mkinstalldirs) $(DESTDIR)$(libdir) $(DESTDIR)$(includedir)
@@ -415,7 +382,7 @@ maintainer-clean-generic:
 clean: clean-am
 
 clean-am: clean-generic clean-libLTLIBRARIES clean-libtool \
-	clean-noinstLIBRARIES mostlyclean-am
+	mostlyclean-am
 
 distclean: distclean-am
 
@@ -453,12 +420,12 @@ uninstall-am: uninstall-includeHEADERS uninstall-info-am \
 	uninstall-libLTLIBRARIES
 
 .PHONY: GTAGS all all-am check check-am clean clean-generic \
-	clean-libLTLIBRARIES clean-libtool clean-noinstLIBRARIES \
-	distclean distclean-compile distclean-depend distclean-generic \
-	distclean-libtool distclean-tags distdir dvi dvi-am info \
-	info-am install install-am install-data install-data-am \
-	install-exec install-exec-am install-includeHEADERS \
-	install-info install-info-am install-libLTLIBRARIES install-man \
+	clean-libLTLIBRARIES clean-libtool distclean distclean-compile \
+	distclean-depend distclean-generic distclean-libtool \
+	distclean-tags distdir dvi dvi-am info info-am install \
+	install-am install-data install-data-am install-exec \
+	install-exec-am install-includeHEADERS install-info \
+	install-info-am install-libLTLIBRARIES install-man \
 	install-strip installcheck installcheck-am installdirs \
 	maintainer-clean maintainer-clean-generic mostlyclean \
 	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
