--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -6,7 +6,7 @@ else
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 endif
 libtrace_la_CFLAGS = @ADD_INCLS@
-libtrace_la_LIBADD = @ADD_LIBS@
+libtrace_la_LIBADD = @ADD_LIBS@ $(top_builddir)/replace/libreplace.a
 libtrace_la_LDFLAGS=-version-info 2:11:0 @ADD_LDFLAGS@
 
 dagapi.c:
