--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -61,14 +61,21 @@ ADD_INCLS = @ADD_INCLS@
 ADD_LDFLAGS = @ADD_LDFLAGS@
 ADD_LIBS = @ADD_LIBS@
 AMTAR = @AMTAR@
+AR = @AR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
+CXX = @CXX@
+CXXCPP = @CXXCPP@
 DAG_TOOLS_DIR = @DAG_TOOLS_DIR@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
+EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+F77 = @F77@
+GCJ = @GCJ@
+GCJFLAGS = @GCJFLAGS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
@@ -76,6 +83,7 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
+RC = @RC@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
@@ -87,7 +95,7 @@ include_HEADERS = libtrace.h dagformat.h wag.h
 @HAVE_DAG_TRUE@libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h dagapi.c dagopts.c
 @HAVE_DAG_FALSE@libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 libtrace_la_CFLAGS = @ADD_INCLS@
-libtrace_la_LIBADD = @ADD_LIBS@
+libtrace_la_LIBADD = @ADD_LIBS@ $(top_builddir)/replace/libreplace.a
 libtrace_la_LDFLAGS = -version-info 2:11:0 @ADD_LDFLAGS@
 subdir = lib
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
@@ -95,7 +103,7 @@ CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(lib_LTLIBRARIES)
 
-libtrace_la_DEPENDENCIES =
+libtrace_la_DEPENDENCIES = $(top_builddir)/replace/libreplace.a
 @HAVE_DAG_TRUE@am_libtrace_la_OBJECTS = libtrace_la-trace.lo \
 @HAVE_DAG_TRUE@	libtrace_la-fifo.lo libtrace_la-dagapi.lo \
 @HAVE_DAG_TRUE@	libtrace_la-dagopts.lo
