--- a/Makefile.in
+++ b/Makefile.in
@@ -61,14 +61,21 @@ ADD_INCLS = @ADD_INCLS@
 ADD_LDFLAGS = @ADD_LDFLAGS@
 ADD_LIBS = @ADD_LIBS@
 AMTAR = @AMTAR@
+AR = @AR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
+CXX = @CXX@
+CXXCPP = @CXXCPP@
 DAG_TOOLS_DIR = @DAG_TOOLS_DIR@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
+EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+F77 = @F77@
+GCJ = @GCJ@
+GCJFLAGS = @GCJFLAGS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
@@ -76,13 +83,14 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
+RC = @RC@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
 install_sh = @install_sh@
 
-SUBDIRS = lib replace
+SUBDIRS = replace lib
 EXTRA_DIST = examples docs
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
