some changes in libtrace wrt new dag api

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,10 +1,10 @@
 lib_LTLIBRARIES = libtrace.la
 include_HEADERS = libtrace.h dagformat.h wag.h
-if HAVE_DAG
-libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h dagapi.c dagopts.c
-else
+#if HAVE_DAG
+#libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h dagapi.c dagopts.c
+#else
 libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
-endif
+#endif
 libtrace_la_CFLAGS = @ADD_INCLS@
 libtrace_la_LIBADD = @ADD_LIBS@ $(top_builddir)/replace/libreplace.a
 libtrace_la_LDFLAGS=-version-info 2:12:0 @ADD_LDFLAGS@
