--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -61,14 +61,21 @@ ADD_INCLS = @ADD_INCLS@
 ADD_LDFLAGS = @ADD_LDFLAGS@
 ADD_LIBS = @ADD_LIBS@
 AMTAR = @AMTAR@
+AR = @AR@
 AS = @AS@
 AWK = @AWK@
 CC = @CC@
+CXX = @CXX@
+CXXCPP = @CXXCPP@
 DAG_TOOLS_DIR = @DAG_TOOLS_DIR@
 DEPDIR = @DEPDIR@
 DLLTOOL = @DLLTOOL@
 ECHO = @ECHO@
+EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+F77 = @F77@
+GCJ = @GCJ@
+GCJFLAGS = @GCJFLAGS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
@@ -76,6 +83,7 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RANLIB = @RANLIB@
+RC = @RC@
 STRIP = @STRIP@
 VERSION = @VERSION@
 am__include = @am__include@
@@ -91,7 +99,7 @@ libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
 #endif
 libtrace_la_CFLAGS = @ADD_INCLS@
 libtrace_la_LIBADD = @ADD_LIBS@ $(top_builddir)/replace/libreplace.a
-libtrace_la_LDFLAGS = -version-info 2:12:0 @ADD_LDFLAGS@
+libtrace_la_LDFLAGS = -version-info 2:13:0 @ADD_LDFLAGS@
 subdir = lib
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
