--- a/configure.in
+++ b/configure.in
@@ -195,4 +195,5 @@ AC_SUBST([ADD_LDFLAGS])
 AC_SUBST([ADD_INCLS])
 
 dnl and finally, output our Makefiles
-AC_OUTPUT(Makefile replace/Makefile lib/Makefile)
+#AC_OUTPUT(Makefile replace/Makefile lib/Makefile)
+AC_OUTPUT
