--- a/configure.in
+++ b/configure.in
@@ -3,6 +3,7 @@ AC_INIT(libtrace,2.0.13,[libtrace@wand.net.nz],libtrace)
 AC_CONFIG_SRCDIR(lib/trace.c)
 AM_INIT_AUTOMAKE(libtrace,2.0.13)
 
+AC_CONFIG_FILES([Makefile replace/Makefile lib/Makefile])
 dnl GNU C library
 dnl AC_GNU_SOURCE
 
@@ -195,5 +196,4 @@ AC_SUBST([ADD_LDFLAGS])
 AC_SUBST([ADD_INCLS])
 
 dnl and finally, output our Makefiles
-#AC_OUTPUT(Makefile replace/Makefile lib/Makefile)
 AC_OUTPUT
