--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,8 @@ AC_CONFIG_FILES([Makefile replace/Makefile lib/Makefile])
 dnl GNU C library
 dnl AC_GNU_SOURCE
 
-AM_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADERS(config.h)
+#AC_CONFIG_HEADERS([config.h])
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
