--- a/configure.in
+++ b/configure.in
@@ -7,7 +7,7 @@ AC_CONFIG_FILES([Makefile replace/Makefile lib/Makefile])
 dnl GNU C library
 dnl AC_GNU_SOURCE
 
-AM_CONFIG_HEADER(config.h)
+AM_CONFIG_HEADER([config.h])
 #AC_CONFIG_HEADERS([config.h])
 dnl Checks for programs.
 AC_PROG_CC
@@ -19,7 +19,7 @@ AC_PROG_LIBTOOL
 # Checks for header files.
 AC_HEADER_STDC
 dnl AC_CHECK_HEADERS(errno.h stdlib.h stdio.h assert.h string.h netinet/in.h assert.h errno.h fcntl.h net/ethernet.h netdb.h pcap.h stdio.h stdlib.h string.h sys/stat.h sys/types.h sys/socket.h sys/un.h unistd.h time.h sys/ioctl.h net/bpf.h pcap.h zlib.h pcap-bpf.h)
-AC_CHECK_HEADERS(pcap.h pcap-bpf.h net/bpf.h zlib.h sys/limits.h stddef.h stdint.h limits.h dagapi.h parser.h libxml/parser.h libxml2/libxml/parser.h)
+AC_CHECK_HEADERS(pcap.h pcap-bpf.h net/bpf.h zlib.h sys/limits.h stddef.h stdint.h limits.h dagapi.h )
 	
 # Checking for the right bpf header to include
 AC_MSG_CHECKING([where the bpf headers are kept])
