some assorted fixes in the examples tree, to support building under freebsd. Isn't quite there yet.
Changed trace_read_packet to use pcap_next_ex, and to set a timeout of 1ms on pcap_open. This fixes the blocking under freebsd, it seems

--- a/examples/erfsplit/Makefile
+++ b/examples/erfsplit/Makefile
@@ -1,9 +1,9 @@
 
 CFLAGS= -Wall -Wimplicit -Wformat -O2 -pipe -g
 
-INCLUDE = -I/usr/local/wand/include -I/usr/local/dag/include
+INCLUDE = -I/usr/local/include -I/usr/local/dag/include
 CFLAGS += $(INCLUDE)
-LDLIBS =  -L/usr/local/wand/lib -ltrace
+LDLIBS =  -L/usr/local/lib -ltrace
 
 BINS    = erfsplit
 
