--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,10 @@
 SUBDIRS=replace lib
 EXTRA_DIST=examples docs
+
+bootstrap-clean:
+	$(RM) -f Makefile.in aclocal.m4 compile config.* \
+		configure depcomp install-sh ltmain.sh missing \
+		mkinstalldirs stamp-h.in \
+		lib/Makefile.in replace/libreplace.la  replace/Makefile.in
+	$(RM) -rf autom4te.cache/
+	
