seems to return at about the right rate now.

--- a/examples/event/Makefile
+++ b/examples/event/Makefile
@@ -8,12 +8,14 @@ CFLAGS += $(INCLUDE)
 libdir = -L/home/dlawson/code/libtrace/lib/.libs/
 LDLIBS = $(libdir) -lpcap -lz
 
-BINS = rate 
+BINS = rate rate-tracetime
 .PHONY: all clean distclean install depend
 
 all: $(BINS) 
 
 rate: rate.c ../../lib/.libs/libtrace.a
+
+rate-tracetime: rate-tracetime.c ../../lib/.libs/libtrace.a
 
 clean:
 	$(RM) *~ *.o $(BINS) $(OBJS) core
