--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,10 +3,10 @@ include_HEADERS = libtrace.h dagformat.h wag.h
 #if HAVE_DAG
 #libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h dagapi.c dagopts.c
 #else
-libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h
+libtrace_la_SOURCES = trace.c fifo.c fifo.h common.h 
 #endif
 libtrace_la_CFLAGS = @ADD_INCLS@
-libtrace_la_LIBADD = @ADD_LIBS@ $(top_builddir)/replace/libreplace.a
+libtrace_la_LIBADD = @ADD_LIBS@ @LTLIBOBJS@
 libtrace_la_LDFLAGS=-version-info 2:16:0 @ADD_LDFLAGS@
 
 dagapi.c:
