fixes to makefile for documentation

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 SUBDIRS=lib
-EXTRA_DIST=examples docs
+man_MANS = libtrace.h.3
+EXTRA_DIST=examples docs $(man_MANS)
+
+.PHONY: docs
 
 bootstrap-clean:
 	$(RM) -f Makefile.in aclocal.m4 compile config.* \
