tidying up examples to make sure they should compile

--- a/examples/event/Makefile
+++ b/examples/event/Makefile
@@ -2,20 +2,16 @@
 PREFIX=/usr/local
 CC=gcc
 
-INCLUDE = -I/home/dlawson/code/libtrace/lib/
-CFLAGS = -Wall -Wimplicit -Wformat -pipe -g -O2
-CFLAGS += $(INCLUDE)
-libdir = -L/home/dlawson/code/libtrace/lib/.libs/
-LDLIBS = $(libdir) -lpcap -lz
+INCLUDE = -I$(PREFIX)/include
+CFLAGS  = -Wall -Wimplicit -Wformat -pipe -g -O2
+CFLAGS  += $(INCLUDE)
+LDFLAGS = -L$(PREFIX)/lib
+LDLIBS  = -ltrace
 
 BINS = rate rate-tracetime
 .PHONY: all clean distclean install depend
 
 all: $(BINS) 
-
-rate: rate.c ../../lib/.libs/libtrace.a
-
-rate-tracetime: rate-tracetime.c ../../lib/.libs/libtrace.a
 
 clean:
 	$(RM) *~ *.o $(BINS) $(OBJS) core
