update changelog for 2.0.18, about to commit Makefile referenced -lpcap -lzl without cause

--- a/examples/tracedump/Makefile
+++ b/examples/tracedump/Makefile
@@ -4,7 +4,7 @@ INCLUDES=-I/usr/local/include
 LIBDIR="./"
 CXXFLAGS=-g -Wall $(INCLUDES) -rdynamic
 LDFLAGS=-L/usr/local/wand/lib
-LDLIBS=-ltrace -ldl -lpcap -lzl
+LDLIBS=-ltrace -ldl 
 LINK_LAYERS=$(addsuffix .so,$(basename $(wildcard link_*.cc)))
 ETH_LAYERS=$(addsuffix .so,$(basename $(wildcard eth_*.cc)))
 IP_LAYERS=$(addsuffix .so,$(basename $(wildcard ip_*.cc)))
