don't dist CVS dirs

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,7 @@ bootstrap-clean:
 
 dist-hook:
 	for i in `\ls examples | grep -v CVS`; do make -C examples/$$i clean; done
+	rm -rf `find $(distdir)/examples -name CVS`
 
 docs:
 	doxygen libtrace.doxygen
